# bzlmod-oci-go

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  go.mod
app/: BUILD.bazel
