load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "app_lib",
    srcs = ["app.go"],
    importpath = "github.com/malt3/bzlmod-oci-go/app",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [
        ":app",
    ],
    mode = "0755",
)

oci_image(
    name = "image",
    base = "@distroless_base",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),    
    entrypoint = ["/app"],
    os = "linux",
    tars = [
        ":tar",
    ],
)

oci_tarball(
    name = "app_tar",
    image = ":image",
    repotags = ["app:latest"],
    visibility = ["//visibility:public"],
)